--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                         <h2>Upscale Markets</h2>
                                         <hr>
                                         <p class="left info">
-                                            An online grocery store web app made with Google's Material AngularJS. 
+                                            An online grocery store web app made with Google's Angular Material. 
                                         </p>
                                         <hr>
                                         <p class="info">
