--- a/index.html
+++ b/index.html
@@ -163,10 +163,14 @@
                                         <hr>
                                         <p class="left info">
                                             A Blackberry App. Offers a choice of restaurants near the University of Waterloo campus given constraints such as time, distance and price.
+                                            <br><br> 
+                                            View on <a href="https://appworld.blackberry.com/webstore/content/59992061/?lang=en&countrycode=CA">BlackBerry World</a>
                                         </p>
                                         <hr>
                                         <p class="info">
-                                            Expected release to the Blackberry App Store by end of April 2016
+                                            <img src="img/projects/wateats-s.png" class="projectsImg"/>
+                                            <a href="img/projects/wateats.jpg" data-lightbox="port"><img src="img/projects/wateats-s2.png" class="projectsImg"/></a>
+                                            <a href="img/projects/wateats2.jpg" data-lightbox="port"><img src="img/projects/wateats-s3.png" class="projectsImg"/></a>
                                         </p>
                                     </div>
                                 </div>
