--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                             View on <a href="https://appworld.blackberry.com/webstore/content/59992061/?lang=en&countrycode=CA">BlackBerry World</a>
                                         </p>
                                         <hr>
-                                        <p class="info">
+                                        <p class="left info">
                                             <img src="img/projects/wateats-s.png" class="projectsImg"/>
                                             <a href="img/projects/wateats.jpg" data-lightbox="port"><img src="img/projects/wateats-s2.png" class="projectsImg"/></a>
                                             <a href="img/projects/wateats2.jpg" data-lightbox="port"><img src="img/projects/wateats-s3.png" class="projectsImg"/></a>
