--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                                         </p>
                                         <hr>
                                         <p class="left info">
-                                            <a href="img/projects/waterloc1.png" data-lightbox="port"><img src="img/projects/waterloc-s.png" class="projectsImg"/></a>
-                                            <a href="img/projects/waterloc2.png" data-lightbox="port"><img src="img/projects/waterloc-s2.png" class="projectsImg"/></a>
+                                            <a href="img/projects/waterloc1.PNG" data-lightbox="port"><img src="img/projects/waterloc-s.png" class="projectsImg"/></a>
+                                            <a href="img/projects/waterloc2.PNG" data-lightbox="port"><img src="img/projects/waterloc-s2.png" class="projectsImg"/></a>
                                         </p>
                                     </div>
                                 </div>
@@ -229,7 +229,7 @@
                                         </p>
                                         <hr>
                                         <p class="left info">
-                                            <a href="img/projects/specia.png" data-lightbox="port"><img src="img/projects/specia-s.png" class="projectsImg"/></a>
+                                            <a href="img/projects/specia.PNG" data-lightbox="port"><img src="img/projects/specia-s.png" class="projectsImg"/></a>
                                         </p>
                                     </div>
                                 </div>
