--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
                 </md-card-content>
             </md-card>
 
-            <div layout="column" flex-xs>
+            <div layout="column" flex-xs class="mobflex">
                 <md-card md-whiteframe="4" layout="row" layout-wrap flex="nogrow" class="cred">
                     <md-card-title class="title" >
                         <md-card-title-text>
