--- a/projects/wateats.TMPL.HTML
+++ b/projects/wateats.TMPL.HTML
@@ -18,10 +18,10 @@
         <p>The following images are progress pictures of the app during its development</p>
         <p class="center">
           <img src="/img/projects/wateats.png" class="img">
-          <img src="/img/projects/wateats1.PNG" class=" xsmall">
-          <img src="/img/projects/wateats2.PNG" class=" xsmall">
-          <img src="/img/projects/wateats3.PNG" class=" xsmall">
-          <img src="/img/projects/wateats4.PNG" class=" xsmall">
+          <img src="/img/projects/wateats1.png" class=" xsmall">
+          <img src="/img/projects/wateats2.png" class=" xsmall">
+          <img src="/img/projects/wateats3.png" class=" xsmall">
+          <img src="/img/projects/wateats4.png" class=" xsmall">
         </p>
         <p class="heading">Features</p>
         <p>
