--- a/index.html
+++ b/index.html
@@ -57,16 +57,10 @@
     </section>
     <section flex-gt-sm="70" flex-offset-gt-sm="15" flex="100" flex-offset="0" id="gallery">
         <md-content layout="row" layout-wrap layout-align="center start">
-            <md-card md-whiteframe="4" layout="column" ng-repeat="pf in portfolio" class="portfolio" flex="nogrow">
-                <md-card-title class="title">
-                    <md-card-title-text>
-                        <span class="md-headline">{{pf.title}}</span>
-                    </md-card-title-text>
-                </md-card-title>
-                <md-card-content class="md-padding" >
-                    <md-content><img ng-src="/img/portfolio/{{pf.img}}" class="img"></md-content>
-                </md-card-content>
-            </md-card>
+            <md-button md-whiteframe="4" layout="column" ng-repeat="pf in portfolio" class="portfolio" flex="nogrow" class="md-padding" ng-mouseenter="hover(pf)" ng-mouseleave="hover(pf)" ng-click="showPortfolio(pf)">
+                    <span class="ptext" ng-show="pf.show">{{pf.title}}</span>
+                    <img ng-src="/img/portfolio/{{pf.img}}" class="img">
+            </md-button>
         </md-content>       
     </section>
     <section flex-gt-sm="70" flex-offset-gt-sm="15" flex="100" flex-offset="0" id="credentials">
