--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </md-card-content>
             </md-card>
 
-            <div layout="column" flex-xs class="mobflex">
+            <div layout="column" flex-xs='100' class="mobflex">
                 <md-card md-whiteframe="4" layout="row" layout-wrap flex="nogrow" class="cred">
                     <md-card-title class="title" >
                         <md-card-title-text>
